# SPNet

./: .gitignore  CMakeLists.txt  gen_makefile.sh  gen_vc2019.bat  main.cpp
src/client/: imgui_demo.cpp
src/core/src/: sita_core.h
src/core/src/sita_core/base/: BinDeserializer.h  BinSerializer.h  ByteOrder.h  Error.cpp  Error.h  UnitTest.cpp  UnitTest.h  sita_base.h  sita_macro.h
src/core/src/sita_core/log/: Log.h
src/core/src/sita_core/net/: MySocket.cpp  MySocket.h  SPSocket.cpp  SPSocket.h  SockAddr.cpp  SockAddr.h  Socket.cpp  Socket.h  my_common.h
src/core/src/sita_core/string/: Fmt.h  String.h
src/core/test/: CMakeLists.txt
src/core/test/src/: main.cpp
src/core/test/src/base/: test_BinSerializer.cpp
src/core/test/src/net/: test_Socket.cpp
src/net/SPClient/: CMakeLists.txt
src/net/SPClient/src/: GameApp.cpp  GameApp.h  NetworkComponent.cpp  NetworkComponent.h  Player.h  main.cpp  pch.h
src/net/SPServer/: CMakeLists.txt
src/net/SPServer/src/: SPNetServer.cpp  SPNetServer.h  main.cpp  pch.h
src/net/SpNetClient/: CMakeLists.txt
src/net/SpNetClient/src/: GameApp.cpp  GameApp.h  GameSession.cpp  GameSession.h  main.cpp
src/net/SpNetServer/: CMakeLists.txt
src/net/SpNetServer/src/: main.cpp
src/net/common/: CMakeLists.txt
src/net/common/src/: sita_net_common.h
src/net/common/src/sita_net_common/: sita_net_common-pch.h
src/net/examples/sita_net_example_001/: CMakeLists.txt
src/net/examples/sita_net_example_002/: CMakeLists.txt
src/net/server/base/: CMakeLists.txt
src/render/: CMakeLists.txt
(+20 files in other folders)
